--- a/requirements.txt
+++ b/requirements.txt
@@ -65,9 +65,8 @@ urllib3==2.3.0
 watchdog==6.0.0
 Werkzeug==3.1.3
 wrapt==1.17.2
-gunicorn==20.1.0
-flask
+gunicorn==21.2.0
 flask-login
 flask-wtf
 flask-sqlalchemy
-gunicorn
+psycopg2-binary==2.9.9
